@@ -1,8 +1,8 @@
-#define FILEVER_INCVERSION        0,16,0,88
-#define PRODUCTVER_INCVERSION     0,16,0,88
-#define STRFILEVER_INCVERSION     "0, 16, 0, 88\0"
-#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 88\0"
+#define FILEVER_INCVERSION        0,16,0,90
+#define PRODUCTVER_INCVERSION     0,16,0,90
+#define STRFILEVER_INCVERSION     "0, 16, 0, 90\0"
+#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 90\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             16
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  88
+#define TSVN_VERBUILD_INCVERSION  90
