@@ -7,6 +7,8 @@
 - ADD: The "Browse..." Button in the relocate dialog
        works now. (Stefan)
 - ADD: Maximize button on the progress window. (Stefan)
+- ADD: The resulting revision number is shown when
+       doing commits, copies/tags, ... (Stefan)
 
 Version 0.16
 - BUG: The "open" command in the repository browser
